Revert "fix(YSP-535): let cta-banner overlap empty div"
This reverts commit 2955c794dab6a3cab9825e93adbf252043d20951.

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_layouts/layouts/banner/banner.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_layouts/layouts/banner/banner.css
@@ -5,17 +5,3 @@
 .layout--banner .layout__region {
   width: 100%;
 }
-
-/*
- * Content moderation places an empty div which causes
- * items not to become flush with the header. This 
- * attempt to target the item underneat that 
- * div in order to let it not have a margin to but up 
- * to the header.
- */
-.layout--banner
-  .layout__region
-  > div:not([class], [id], [name], [style])
-  + .cta-banner {
-  margin-block-start: 0;
-}
